<resources>
    <string name="app_name">WalkNShot</string>

    <!-- Welcome -->
    <string name="head_welcome">Show your beautiful life</string>
    <string name="head_register">Create your account</string>

    <!-- Login and Register -->
    <string name="prompt_account">Username / E-mail</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">E-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_cfm">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Sign up</string>
    <string name="action_forget_psw">Forget Password?</string>
    <string name="action_sign_up">JOIN WalkNShot</string>
    <string name="error_login_fail">Login failed</string>
    <string name="error_register_fail">Register failed</string>
    <string name="error_invalid_blank">Username or password cannot be empty</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short (at least 6)</string>
    <string name="error_invalid_password_confrim">The two password you input are inconsistent</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_username_exist">The username already exists</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_network_fail">The networking connection fails</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_success">Login successfully</string>
    <string name="register_success">Sign up successfully</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading">Wait a minute…</string>

    <!-- MapPage -->
    <string name="hint_start_record_path">Ready to walk and shot?</string>
    <string name="hint_end_record_path">The path will end in this position</string>
    <string name="reply_go">Go</string>
    <string name="reply_cancel">Cancel</string>
    <string name="reply_ok">OK</string>
    <string name="log_start_record_path">Begin to record path</string>
    <string name="log_end_record_path">Recording has been closed</string>
    <string name="error_location_loss">Sorry, can\'t get location </string>

    <!-- Discovery -->
    <string name="title_all_path">All</string>
    <string name="title_my_path">My</string>
    <string name="hint_your_comment">Your Comment</string>

    <!-- AddPictures -->
    <string name="title_beautifypictures">Beautify</string>
    <string name="action_submitPictures">Submit</string>
    <string name="action_shareToWeChat">Share</string>
    <string name="hint_add_pictures">(hint: pictures can be deleted by clicking)</string>
    <string name="action_savePicture">Save</string>
    <string name="action_take_photo">Camera</string>
    <string name="action_open_album">Photo Album</string>
    <string name="title_cancelBeautify">Origin</string>
    <string name="title_oldRemember">Old Remember</string>
    <string name="title_sunShine">Sun Shine</string>
    <string name="title_sketch">Sketch</string>
    <string name="error_max_photo">At most 9 pictures</string>
    <string name="error_upload_fail">Sorry, uploading fails</string>
    <string name="upload_success">Upload successfully</string>
    <string name="error_download_fail">Sorry, downloading fails</string>
    <string name="download_success">Download successfully</string>
    <string name="save_success">Save successfully</string>

    <!-- Settings -->
    <string name="action_exit">Exit</string>
    <string name="hint_start_exit">You will be logged off your account.</string>
    <string name="error_invalid_function">This function is not open yet.</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_change_psw">Change Password</string>
    <string name="title_help">Help</string>

    <!--View Path-->
    <string name="hue">Hue</string>
    <string name="alpha">Alpha</string>
    <string name="width">Width</string>
    <string name="snapshot_preview">Snapshot Preview</string>

    <!-- Bar -->
    <string name="title_map">Map</string>
    <string name="title_discovery">Discover</string>
    <string name="title_personal_center">Me</string>
    <string name="title_setting">Settings</string>
    <string name="title_add_pictures">Add pictures</string>
    <string name="title_view_path">Path Details</string>
    <string name="title_comment">Comment</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">This app requires location permission to start the main interface, or the map can\'t be used.</string>
    <string name="location_permission_denied">This app requires location permission to start the main interface. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; WalkNShot &gt; Permissions.</string>
    <string name="permission_required_toast">location permission is required for this app</string>

</resources>
