<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.sjtu.se.walknshot.androidclient.activity.ViewPathActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_view_path"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/view_path_btn_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:maxHeight="24dp"
            android:src="@drawable/icon_share"
            android:tint="@color/white" />

    </android.support.v7.widget.Toolbar>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/photo_preview"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/bg_pink"
            android:padding="1dp"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="0.01dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/lostGrey" />

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView android:text="@string/hue" />

                <SeekBar android:id="@+id/hueSeekBar" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView android:text="@string/alpha" />

                <SeekBar android:id="@+id/alphaSeekBar" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView android:text="@string/width" />

                <SeekBar android:id="@+id/widthSeekBar" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</LinearLayout>
