<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="cn.edu.sjtu.se.walknshot.androidclient.RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical"
        android:padding="10dip">

        <LinearLayout
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/action_login"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip"
            android:gravity="center"
            android:text="@string/head_register"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:background="@drawable/bg_radius"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/icon_user"
                android:tint="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:hint="@string/prompt_username"
                android:padding="5dip"
                android:textColorHint="@color/lostGrey"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_layout_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:background="@drawable/bg_radius"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dip">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/icon_psw"
                android:tint="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="#00000000"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="5dip"
                android:textColorHint="@color/lostGrey"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_layout_psw_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dip">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/icon_psw"
                android:tint="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="#00000000"
                android:hint="@string/prompt_password_cfm"
                android:inputType="textPassword"
                android:padding="5dip"
                android:textColorHint="@color/lostGrey"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dip"
            android:background="@drawable/bg_text"
            android:paddingBottom="5dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip"
            android:text="@string/action_sign_up"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
