<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.sjtu.se.walknshot.androidclient.activity.AddPicturesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_add_pictures"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 显示图片 -->
        <!-- 设置运行多行 设置圆角图形 黑色字体-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <GridView
                android:id="@+id/add_pic_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gridview"
                android:gravity="center"
                android:numColumns="4"
                android:padding="@dimen/activity_horizontal_margin"
                android:scrollbarSize="2dp"
                android:scrollbarThumbVertical="@drawable/bg_pink"
                android:stretchMode="columnWidth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/hint_add_pictures" />

        </RelativeLayout>
        <!-- 底部按钮 -->

        <Button
            android:id="@+id/add_pic_btn_submit"
            style="@style/ButtonCommonTheme"
            android:text="@string/action_submitPictures"
            android:textAllCaps="true" />

        <!--<TextView-->
        <!--android:id="@+id/shareToWeChat"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dip"-->
        <!--android:background="@drawable/bg_text"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/shareToWeChat"-->
        <!--android:textAllCaps="true"-->
        <!--android:textSize="20sp" />-->
    </LinearLayout>
</LinearLayout>

