<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="cn.edu.sjtu.se.walknshot.androidclient.activity.CommentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_comment"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <GridView
                android:id="@+id/add_com_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:scrollbarSize="2dp"
                android:scrollbarThumbVertical="@drawable/bg_pink" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transGrey"
            android:padding="8dp">

            <EditText
                android:id="@+id/myComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/hint_your_comment"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="8dp" />

            <Button
                android:id="@+id/mBtnSubmitCom"
                style="@style/ButtonCommonTheme"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:text="@string/action_submitPictures"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>